First few changes on the project. Added search bar

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+html, body {
+  width: 100%;
+  height: 100%;
+  background-color: #c0c0c0;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -26,6 +32,10 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.search-div {
+  
 }
 
 @keyframes App-logo-spin {
